--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,202 +1,285 @@
-/* Creating vertical flexbox for nav links (chat rooms) */
-
-/* font-family: 'Dela Gothic One', cursive;
-font-family: 'Dosis', sans-serif;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-
+@import url("https://fonts.googleapis.com/css2?family=Homenaje&family=Poiret+One&display=swap");
 
 #body {
-        font-size: 62.5%;
-        margin: auto;
-        height: 100vh;
+  font-family: "Homenaje", sans-serif;
+  font-size: 62.5%;
+  margin: auto;
+  height: 100vh;
 }
 
 /* home page */
 
 .container {
-    display: flex;
-    flex-direction: column;
-    border: 2px solid pink;
-    width: 90vw;
-    height: 100vh;
-    margin: auto;
-
-}
-
-.homeChatBoxContainer {
-    display: flex;
-    justify-content: center;
-    border: 2px solid green;
-
-}
-
-.homeChatInnerContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: space-between;
-}
-
-form {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    border: 2px solid green;
-
-}
-
-.formDiv {
-    margin-bottom: .8rem;
-    border: 2px solid green;
-
-}
-
-
-/* link pages */
-
-.pageContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid red;
-    height: 100vh;
-    margin: auto;
-
-}
-
-
-
-.mainContainer {
-    display: flex;
-    flex-direction: column;
-    border: 2px solid yellow;
-    margin-bottom: 1.6rem;
-
-}
-
-.roomsContainer {
-    border: 2px solid purple;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 35vw;
-
-}
-
-.nav {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    border: 2px solid purple;
-    width: 100%;
-}
-
-.links {
-    margin: .4rem;
-    font-size: .8rem;
-    border: 2px solid purple;
-    text-decoration: none;
-
-}
-
-.ad {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-img {
-    border: 2px solid black;
-    margin: .8rem
-}
-
-.chatBoxContainer {
-    border: 2px solid blue;
-    display: flex;
-    flex-direction: column;
-    width: 55vw;
-    height: 100%;
-    justify-content: space-between;
-}
-
-input {
-    margin: .8rem;
-}
-
-h1 {
-    font-size: 3.2rem;
-    text-align: center;
-}
-
-h3 {
-    font-size: 1.6rem;
-    margin: .8rem;
-    text-align: center;
-}
-
-@media screen and (max-width: 768px) {
-
-    .mainContainer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    
-    }
-
-    .chatBoxContainer {
-        flex-direction: column;
-        width: 90vw;
-    }
-    
-    .roomsContainer {
-        width:90vw;
-    
-    }
-
-    .homeChatBoxContainer {
-        flex-direction: column;
-    
-    }
-
-    form {
-        flex-direction: column;
-
-    
-    }
+  display: flex;
+  flex-direction: column;
+  width: 90vw;
+  margin: auto;
 }
 
 /*Banner styling*/
 
-.mainContainer {
-    width: 100%
+.mainContainerBanner {
+  margin-top: 0.8rem;
+  margin-bottom: 0.8rem;
+  width: 100%;
 }
 
 #title {
-    background-color: rgb(142, 66, 145);
-    color:white;
-    margin-bottom:0px;
+  color: white;
+  font-size: 1.6rem;
+  margin: 0;
+  border-top-left-radius: 0.4rem;
+  border-top-right-radius: 0.4rem;
+  border: 2px solid rgb(54, 68, 228);
+  border-bottom: none;
+  background-color: rgb(54, 68, 228);
+  padding: 0.2rem;
+  width: 100%;
 }
 
 #subTitle {
-    background-color: rgb(142, 66, 145);
-    color:white;
-    margin:0px;
+  border-bottom-left-radius: 0.4rem;
+  border-bottom-right-radius: 0.4rem;
+  border: 2px solid rgb(54, 68, 228);
+  border-top: none;
+  color: rgb(54, 68, 228);
+  margin: 0;
+  font-size: 1.2rem;
+  width: 100%;
+  padding: 0.8rem;
+}
+
+/* whole chat container - home page */
+
+.homeChatBoxContainer {
+  display: flex;
+  justify-content: center;
+  border-radius: 0.8rem;
+  margin-bottom: 1.6rem;
+}
+
+/* form side */
+.homeChatInnerContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: space-between;
+  width: 100%;
+  background-color: rgb(204, 213, 255);
+  border-top-right-radius: 0.8rem;
+  border-bottom-right-radius: 0.8rem;
+}
+
+.homeChatHeader {
+  color: rgb(54, 68, 228);
+  margin-top: 0.8rem;
+  border-bottom-right-radius: 0.8rem;
+  border-top-right-radius: 0.8rem;
+  background-color: white;
+  margin-right: 0.8rem;
+  box-shadow: 0.1rem 0.1rem 0.2rem;
+}
+
+.formDiv {
+  margin-bottom: 0.8rem;
 }
 
 form {
-    margin: auto;
+  font-size: 0.8rem;
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  padding: 0.8rem;
+  background-color: white;
+  border-radius: 0.8rem;
+  margin: auto;
+  color: rgb(54, 68, 228);
 }
 
-#messages {
-    list-style-type: none;
-    margin-left:30px;
+label {
+  margin: 0.2rem;
+  padding: 0.4rem;
+  font-size: .8rem;
+  margin-bottom: .2rem;
+}
+
+input {
+  width: 100%;
+}
+
+.button {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 0.4rem;
+  margin-right: 0.4rem;
 }
 
 button {
-    background-color: greenyellow;
-    width: 30%;
+  background-color: rgb(54, 68, 228);
+  color: white;
+  width: 30%;
+  border-radius: 0.8rem;
+  padding: 0.4rem;
+  border: none;
+}
+
+button:hover {
+  background-color: rgb(204, 213, 255);
+  color: rgb(54, 68, 228);
+}
+
+/* link side */
+
+.roomsContainer {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 35vw;
+  background-color: rgb(54, 68, 228);
+  border-bottom-left-radius: 0.8rem;
+  border-top-left-radius: 0.8rem;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-right: 0.2rem solid rgb(54, 68, 228);
+  border-left: 0.2rem solid rgb(54, 68, 228);
+  background-color: white;
+  width: 100%;
+}
+
+.links {
+  color: rgb(54, 68, 228);
+  margin: 0.4rem 0rem 0.4rem;
+  font-size: 0.8rem;
+  padding: 0.4rem;
+  border: 2px solid rgb(54, 68, 228);
+  border-radius: 0.8rem;
+  text-decoration: none;
+  width: 60%;
+  text-align: center;
+}
+
+.links:hover {
+  background-color: rgb(204, 213, 255);
+  border: 2px solid rgb(204, 213, 255);
+  color: rgb(54, 68, 228);
+}
+
+.ad {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border-left: 0.2rem solid rgb(54, 68, 228);
+  border-bottom: 0.2rem solid rgb(54, 68, 228);
+  border-right: 0.2rem solid rgb(54, 68, 228);
+  border-bottom-left-radius: 0.8rem;
+}
+
+img {
+  margin: 0.8rem;
+  border-radius: 0.8rem;
+}
+
+input {
+  margin: 0.8rem;
+  border: .2rem solid rgb(54, 68, 228);
+  border-radius: .8rem;
+  padding: .4rem;
+}
+
+h1 {
+  font-size: 3.2rem;
+  text-align: center;
+}
+
+h3 {
+  font-family: "Homenaje", sans-serif;
+  font-size: 1.6rem;
+  margin: 0.8rem;
+  text-align: center;
+}
+
+/* form data messages */
+
+#messages {
+  list-style-type: none;
+}
+
+#scrollContainer {
+  scroll-behavior: smooth;
+  margin: auto;
+  padding: 0.2rem;
+  font-size: 0.8rem;
+  width: 95%;
+  height: 22vh;
+  margin-bottom: 0.8rem;
+  overflow: scroll;
+  color: rgb(54, 68, 228);
+  border: 2px solid rgb(54, 68, 228);
+  border-top-left-radius: 0.8rem;
+  background-color: white;
+}
+
+#propsHeader {
+  color: rgb(54, 68, 228);
+  font-size: .8rem;
+  text-align: center;
+  margin: 0rem;
+}
+
+/* mobile responsive */
+
+@media screen and (max-width: 768px) {
+  .mainContainerBanner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 0.8rem;
+  }
+
+  .roomsContainer {
+    width: 90vw;
+  }
+
+  .homeChatBoxContainer {
+    flex-direction: column;
+  }
+
+  form {
+    flex-direction: column;
+  }
+
+  h3 {
+    font-size: 0.1.6rem;
+  }
+
+  .homeChatHeader {
+    margin-top: 0.8rem;
+    border-bottom-right-radius: 0.8rem;
+    border-top-right-radius: 0.8rem;
+    background-color: white;
+    margin-right: 0.8rem;
+    margin-bottom: 0.8rem;
+  }
+
+  .homeChatInnerContainer {
+    margin-top: 0.8rem;
+    border-radius: 0.8rem;
+  }
+
+  .roomsContainer {
+    border-radius: 0.8rem;
+  }
+
+  .ad {
+    border-bottom-right-radius: 0.8rem;
+  }
 }
